Issue #1: z-index makes the overlay to be on top (twitter.com, google.com)

--- a/style/main.css
+++ b/style/main.css
@@ -6,6 +6,7 @@
   left: 0;
   background: rgba(0,0,0,0.8);
   -webkit-user-select: none;
+  z-index: 100;
 }
 
 #tabswitcher-overlay .favicon {
